@@ -1,79 +1,63 @@
 package pro.kensait.mockito.mocking;
 
-import static org.mockito.ArgumentMatchers.*;
 import static org.mockito.Mockito.*;
 import static pro.kensait.mockito.mocking.Util.*;
 
-import java.util.Arrays;
 import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
 
+import org.junit.jupiter.api.DisplayName;
 import org.junit.jupiter.api.Test;
 
+@DisplayName("スパイの挙動を確認するテスト")
 @SuppressWarnings("unchecked")
 public class SpyTest {
 
     @Test
+    @DisplayName("スパイの基本的な挙動を確認する")
     void test_Case_1() {
+        // Mapインタフェースをスパイ化する
         Map<Integer, String> mapSpy = spy(Map.class);
 
+        // 振る舞いを設定する（when方式）
         when(mapSpy.get(0)).thenReturn("foo");
         when(mapSpy.get(1)).thenReturn("bar");
         when(mapSpy.get(2)).thenReturn("baz");
 
-        // マップからすべてのエントリを抽出する（実行フェーズ）
-        List<Integer> keyList = Arrays.asList(0, 1, 2, 3);
-        extractEntry(mapSpy, keyList, "test_Case_4");
+        // ユーティリティ（Mapからすべてのエントリを抽出しコンソールに表示）
+        extractEntry(mapSpy, List.of(0, 1, 2, 3), "test_Case_1");
     }
 
     @Test
+    @DisplayName("モック化したHashMapに対して値を追加した場合の挙動を確認する（比較用）")
     void test_Case_2() {
-        Map<String, String> mapSpy = spy(Map.class);
+        // HashMapクラスをモック化する
+        Map<Integer, String> mapMock = mock(HashMap.class);
+        mapMock.put(0, "foo");
+        mapMock.put(1, "bar");
+        mapMock.put(2, "baz");
 
-        when(mapSpy.get(new String("1"))).thenReturn("one");
+        // 振る舞いを設定する（when方式）
+        when(mapMock.get(2)).thenReturn("bazbaz");
 
-        // インスタンスが別でも等価であれば同じ引数と見なされる
-        String value = mapSpy.get(new String("1"));
-        System.out.println(value);
+        // ユーティリティ（Mapからすべてのエントリを抽出しコンソールに表示）
+        extractEntry(mapMock, List.of(0, 1, 2), "test_Mock");
     }
 
     @Test
+    @DisplayName("スパイしたHashMapに対して値を追加した場合の挙動を確認する")
     void test_Case_3() {
-        Map<Integer, String> mapSpy = spy(Map.class);
-
-        when(mapSpy.get(0)).thenReturn("foo");
-        when(mapSpy.get(1)).thenReturn("bar");
-        when(mapSpy.get(1)).thenReturn("barbar");
-        when(mapSpy.get(2)).thenReturn("baz0", "baz1", "baz2");
-
-        // マップからすべてのエントリを抽出する（実行フェーズ）
-        List<Integer> keyList = Arrays.asList(0, 1, 2, 2, 1, 2, 2);
-        extractEntry(mapSpy, keyList, "test_Case_4");
-    }
-
-    @Test
-    void test_Case_4() {
-        Map<Integer, String> mapSpy = spy(Map.class);
-
-        when(mapSpy.get(anyInt())).thenReturn("foo");
-
-        // マップからすべてのエントリを抽出する（実行フェーズ）
-        List<Integer> keyList = Arrays.asList(0, 1, 2);
-        extractEntry(mapSpy, keyList, "test_Case_4");
-    }
-
-    @Test
-    void test_Case_5() {
+        // HashMapクラスをスパイ化する
         Map<Integer, String> mapSpy = spy(HashMap.class);
-
         mapSpy.put(0, "foo");
         mapSpy.put(1, "bar");
         mapSpy.put(2, "baz");
+
+        // 振る舞いを設定する（when方式）
         when(mapSpy.get(2)).thenReturn("bazbaz");
 
-        // マップからすべてのエントリを抽出する（実行フェーズ）
-        List<Integer> keyList = Arrays.asList(0, 1, 2);
-        extractEntry(mapSpy, keyList, "test_Case_5");
+        // ユーティリティ（Mapからすべてのエントリを抽出しコンソールに表示）
+        extractEntry(mapSpy, List.of(0, 1, 2), "test_Spy");
     }
 }
